# epgs

./: .gitignore  CHANGELOG.md  README_ENTERPRISE.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTEGRATION_CHECKLIST.md
docs/evidence/: HOW_TO_VERIFY.md
docs/pilot/: Pilot-Proposal-Outline.md  Success-Criteria.md
docs/spec/: EPGS-API-Contract.md  EPGS-Core-Execution-Law.md  EPGS-Determinism-Guarantee.md
integrations/reference/: hardware_gate.md  software_gate.md
output/ledger/3ae417de-94b6-4780-879b-6e2f2ea5242a/: b145e429-0991-4b5b-9b2c-861de0fe2f05.json
output/runs/3ae417de-94b6-4780-879b-6e2f2ea5242a/: run_result.json
output_ci/scenario_0_run1/ledger/11111111-1111-1111-1111-000000000000/: 22222222-2222-2222-2222-000000000000.json
output_ci/scenario_0_run1/runs/11111111-1111-1111-1111-000000000000/: run_result.json
scripts/: determinism_summary.py  export_evidence_bundle.py
src/epgs/: main.py
src/epgs.egg-info/: SOURCES.txt  requires.txt
src/epgs/core/: crypto.py  types.py
src/epgs/modules/: aegixa.py  decision_generator.py  execution_sink.py  neurochain.py  neuropause.py  nrrp.py  ube.py
src/epgs/orchestrator/: replay.py  run.py
src/epgs/profiles/: base.py
src/epgs/scenarios/: S-CAUTION-ASSIST.json  S-FAST-NOTREADY.json  S-MIDSTOP-DEGRADE.json  S-NRRP-TERMINATE.json  S-STABLE-SAFE.json  load.py  schema.py
tests/integration/: test_api_verify_and_tamper.py  test_mandatory_scenarios.py  test_replay_equivalence.py  test_replay_equivalence_all_scenarios.py  test_run_and_verify.py
tests/unit/: test_neuropause.py
(+13 files in other folders)
